<?xml version="1.0"?>
<package format="2">
  <name>task_planning</name>
  <version>1.8.1</version>
  <description>
    Python library for interacting with HERB through OpenRAVE. HERB is a
    bimanual mobile manipulator developed by the Personal Robotics Lab at
    Carnegie Mellon University.
  </description>
  <url type="website">https://github.com/personalrobotics/herbpy</url>
  <url type="repository">https://github.com/personalrobotics/herbpy.git</url>
  <url type="bugtracker">https://github.com/personalrobotics/herbpy/issues</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>python</depend>

  <exec_depend>herbpy</exec_depend>

  <!--<test_depend>or_pushing</test_depend>--> <!-- in randomized_rearrangement_planning -->
</package>
